# validations/user/validate-change-user-password.js
@@ -1,17 +1,0 @@
-const Joi = require('@hapi/joi')
-
-/**
- *
- * @param user
- * @returns {*}
- */
-const validateChangeUserPassword = (user) => {
-    const schema = Joi.object({
-        oldPassword: Joi.string().allow(""),
-        newPassword: Joi.string().allow(""),
-        confirmNewPassword: Joi.string().allow("")
-    })
-    return schema.validate(user)
-}
-
-module.exports = validateChangeUserPassword
